tailwind and daisy build

--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -24,11 +24,16 @@
                 <span class="label-text">Upload Image:</span>
             </label>
             <div class="flex items-center">
-                <input type="file" id="image" name="image" class="file-input w-full" required>
+                <input type="file" id="image" name="image" class="block w-full text-sm text-slate-500
+      file:mr-4 file:py-2 file:px-4
+       file:border-blue-300 file:rounded-lg
+      file:text-sm file:font-semibold
+      file:bg-blue-50 file:text-blue-700
+      hover:file:bg-blue-100" required>
             </div>
         </div>
         <div class="form-control mt-6">
-            <button type="submit" class="btn btn-primary w-full">Add Blog</button>
+            <button type="submit" class="btn btn-main w-full">Add Blog</button>
         </div>
     </form>
 
