--- a/public/styles.css
+++ b/public/styles.css
@@ -3,3 +3,18 @@
 @tailwind utilities;
 
 /* Add any custom styles here */
+.btn-main {
+    @apply bg-sky-200 text-sky-700 hover:bg-sky-600 hover:text-white border-sky-500;
+}
+
+.btn-second {
+    @apply bg-sky-700 text-white hover:bg-sky-200 hover:text-sky-700;
+}
+
+.btn-red {
+    @apply bg-red-200 text-red-700 border-red-600 hover:bg-red-600 hover:text-white;
+}
+
+.input-box {
+    @apply w-full text-sm bg-cyan-600/5 rounded px-5 py-3 mb-4 outline-cyan-300 shadow-sm;
+}
