--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,8 +1,8 @@
-<div class="h-screen bg-cyan-50 flex justify-center items-center">
+<div class="h-screen bg-[url('../assets/bg-3.jpg')] bg-no-repeat bg-cover flex justify-center items-center">
     <div class="grid grid-cols-2 gap-12 w-full max-w-6xl">
         <div class="relative w-full rounded-2xl">
             <img src="../assets/banner-2.webp" alt="Travel Inspiration" class="object-cover w-full h-full rounded-2xl">
-            <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-40 rounded-2xl">
+            <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-30 rounded-2xl">
                 <h2 class="text-white text-4xl font-bold text-center">Welcome Back!<br />Log in to Continue</h2>
             </div>
         </div>
@@ -23,7 +23,7 @@
                     <input type="password" id="password" class="input input-bordered" name="password" required>
                 </div>
                 <div class="form-control mt-6">
-                    <button type="submit" class="btn btn-primary">Sign In</button>
+                    <button type="submit" class="btn btn-second">Sign In</button>
                 </div>
             </form>
             <% if (typeof error !=='undefined' ) { %>
