--- a/views/manageStories.ejs
+++ b/views/manageStories.ejs
@@ -1,11 +1,11 @@
 <div class="container mx-auto p-6 bg-white ">
     <div class="flex justify-between items-center mb-3">
-        <h2 class="text-3xl font-bold mb-4">Manage My Blog Posts</h2>
+        <h2 class="text-3xl font-bold mb-4">My Blogs</h2>
 
         <!-- Back to Dashboard Button -->
         <div class="mb-4">
             <form action="/dashboard" method="GET" style="display: inline;">
-                <button type="submit" class="btn btn-second">Back to Dashboard</button>
+                <button type="submit" class="btn btn-second">Dashboard</button>
             </form>
         </div>
     </div>
