--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,4 @@
-<div class="h-screen bg-[url('../assets/banner-3.webp')] bg-no-repeat bg-cover flex justify-center items-center ">
+<div class="h-screen bg-cyan-50 bg-no-repeat bg-cover flex justify-center items-center ">
     <div class="grid grid-cols-2 gap-12 w-full max-w-6xl ">
         <div class="relative w-full rounded-2xl">
             <img src="../assets/banner-1.jpg" alt="Travel Inspiration" class="object-cover w-full h-full rounded-2xl">
