--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,4 +1,4 @@
-<div class="h-screen bg-[url('../assets/bg-3.jpg')] bg-no-repeat bg-cover flex justify-center items-center">
+<div class="h-screen bg-cyan-50 bg-no-repeat bg-cover flex justify-center items-center">
     <div class="grid grid-cols-2 gap-12 w-full max-w-6xl">
         <div class="relative w-full rounded-2xl">
             <img src="../assets/banner-2.webp" alt="Travel Inspiration" class="object-cover w-full h-full rounded-2xl">
