--- a/views/editBlog.ejs
+++ b/views/editBlog.ejs
@@ -1,9 +1,9 @@
 <div class="container mx-auto mt-10 p-6 bg-white rounded-lg shadow-md">
-    <h2 class="text-3xl font-bold mb-6">Edit Blog Post</h2>
+    <h2 class="text-3xl font-bold mb-6">Edit Post</h2>
 
     <!-- Close Button to go back to Manage Stories -->
     <div class="mb-4">
-        <a href="/manage-stories" class="btn btn-second">Back to Manage Stories</a>
+        <a href="/manage-stories" class="btn btn-second">Manage Stories</a>
     </div>
 
     <!-- Display current image if it exists -->
