--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -1,4 +1,9 @@
 <div class="container mx-auto mt-10 p-6 bg-white rounded-lg shadow-md">
+    <div class="mb-4">
+        <form action="/dashboard" method="GET" style="display: inline;">
+            <button type="submit" class="btn btn-second">Dashboard</button>
+        </form>
+    </div>
     <h2 class="text-3xl font-bold mb-6 text-center">Add a New Blog</h2>
     <form action="/add-travel-story" method="POST" enctype="multipart/form-data" class="space-y-4">
         <div class="form-group">
