--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -24,7 +24,7 @@
                                     </p>
                                     <div class="card-actions justify-end">
                                         <button class="btn btn-second"
-                                            onclick="showStory(`<%= story.title %>`, `<%= story.visitedLocation %>`, `<%=story.story %>`, `<%= story.imageUrl %>`)">Read
+                                            onclick="showStory(`<%= story.title %>`, `<%= story.visitedLocation %>`, `<%= story.story %>`, `<%= story.imageUrl %>`)">Read
                                             More</button>
                                     </div>
                                 </div>
@@ -32,10 +32,26 @@
                             <% }); %>
                                 <% } %>
             </div>
+
+            <!-- Pagination Controls -->
+            <div class="flex justify-center mt-6">
+                <% if (currentPage> 1) { %>
+                    <a href="/dashboard?page=<%= currentPage - 1 %>" class="btn btn-main mr-2">Previous</a>
+                    <% } %>
+                        <% for (let i=1; i <=totalPages; i++) { %>
+                            <a href="/dashboard?page=<%= i %>"
+                                class="btn <%= currentPage === i ? 'btn-active' : 'btn-secondary' %> mx-1">
+                                <%= i %>
+                            </a>
+                            <% } %>
+                                <% if (currentPage < totalPages) { %>
+                                    <a href="/dashboard?page=<%= currentPage + 1 %>" class="btn btn-main ml-2">Next</a>
+                                    <% } %>
+            </div>
+
         </div>
 
         <!-- Modal Structure -->
-
         <dialog id="storyModal" class="modal">
             <div class="modal-box w-full max-w-3xl"> <!-- Set a larger max-width -->
                 <div class="modal-header flex justify-between items-center p-4 border-b">
@@ -56,7 +72,9 @@
             </div>
         </dialog>
     </div>
+
     <%- include('./partials/footer.ejs') %>
+
         <script>
             function showStory(title, location, story, imageUrl) {
                 document.getElementById('modal-title').innerText = title;
