--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <body class="bg-gray-100">
+
     <!-- Navbar Section -->
     <nav class="bg-white shadow sticky top-0 z-50">
         <div class="mx-auto px-4 py-2 flex justify-between items-center">
@@ -14,6 +15,7 @@
             </div>
         </div>
     </nav>
+
     <!-- Hero Section -->
     <div class="hero min-h-screen" style="background-image: url(../assets/banner-3.webp);">
         <div class="hero-overlay bg-opacity-60"></div>
@@ -31,8 +33,7 @@
 
 
     <!-- Body Section -->
-    <div
-        class="container grid grid-cols-2 gap-3 mx-auto my-8 p-6 bg-white rounded-lg shadow-lg transition duration-300 hover:shadow-xl">
+    <div class="container grid grid-cols-2 gap-3 mx-auto my-8 p-6 bg-white rounded-lg shadow-lg  hover:shadow-xl">
         <div>
             <h2 class="text-3xl font-bold mb-4 text-blue-600">What You Can Do</h2>
             <p class="mb-4 text-gray-700 px-2">
