--- a/views/manageStories.ejs
+++ b/views/manageStories.ejs
@@ -1,4 +1,4 @@
-<div class="container mx-auto p-6 bg-white">
+\<div class="container mx-auto p-6 bg-white">
     <div class="flex justify-between items-center mb-3">
         <h2 class="text-3xl font-bold mb-4">My Blogs</h2>
 
