--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,6 +33,12 @@
                             class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 w-full text-left">Manage My
                             Blogs</button>
                     </form>
+                    <form action="/saved-stories" method="GET">
+                        <button type="submit"
+                            class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 w-full text-left">Saved
+                            Stories</button>
+                    </form>
+
                 </div>
             </div>
 
