--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Travel Blog</title>
     <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <link rel="stylesheet" href="../../public/styles.css">
     <link rel="stylesheet" href="../../public/dist/styles.css">
 </head>
