--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <div class="h-screen bg-cyan-50 bg-no-repeat bg-cover flex justify-center items-center ">
-    <div class="grid grid-cols-2 gap-12 w-full max-w-6xl ">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 w-full max-w-6xl ">
         <div class="relative w-full rounded-2xl">
             <img src="../assets/banner-1.jpg" alt="Travel Inspiration" class="object-cover w-full h-full rounded-2xl">
             <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-20 rounded-2xl">
